WIP testing stuff

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/libDaisy"]
 	path = libs/libDaisy
 	url = https://github.com/munshkr/libDaisy.git
+[submodule "libs/DaisySP"]
+	path = libs/DaisySP
+	url = https://github.com/electro-smith/DaisySP.git
